added perlin noise post

--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -75,6 +75,9 @@ layout: default
     </td>
 
     <td>
+      <a href="http://joeiddon.me/projects/javascript/perlinNoise">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/noisePreview.JPG"></img>
+      </a>
     </td>
   </tr>
   
