added SO profile on about page

--- a/about.html
+++ b/about.html
@@ -2,9 +2,12 @@
 layout: default
 ---
 
-<h1>Hi, Im joe waddup</h1>
+<h1>Tuoba</h1>
 
 <p>
-  this is my about page where I will write some stuf 'bout me. I may include some pictures and other stuff, but not yet cos im stil
-  seting stuf up
+  Coding some stuf. Answer questions on stack when bored:
 </p>
+
+<a href="https://stackoverflow.com/users/7434365">
+	<img style="width: 208px; height: 58px;" src="https://stackoverflow.com/users/flair/7434365.png?theme=dark">
+</a>
