--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -81,4 +81,12 @@ layout: default
     </td>
   </tr>
   
+  <tr>    
+    <td>
+      <a href="http://joeiddon.me/projects/javascript/snake">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/snake2dPreview.JPG"></img>
+      </a>
+    </td>
+  </tr>
+  
 </table>
