--- a/club/index.html
+++ b/club/index.html
@@ -5,8 +5,9 @@ layout: default
 <h1>Arduino Club</h1>
 
 <p>
-The "/club" sector of this website will be used to log the progress of the "Arduino Club" at our school.
+The "/club" sector of this website will be used to log the progress of the "Arduino Club" at our school. I was granted £250 by the school to fund the club. <a href="http://joeiddon.me/club/log">This page</a> will be used to track our expenditures.
 </p>
+
 
 <p>
 At the time of creation, we are in the middle of our first project: a classic snake game on an 8x8 matrix of LEDs.
