--- a/club/index.html
+++ b/club/index.html
@@ -5,7 +5,7 @@ layout: default
 <h1>Arduino Club</h1>
 
 <p>
-The "/club" sector of this website will be used to log the progress of the "Arduino Club" at our school. I was granted £250 by the school to fund this club. <a href="http://joeiddon.me/club/log">This page</a> will be used to track our expenditures.
+The "/club" sector of this website will be used to log the progress of the "Arduino Club" at our school. I was granted 250 by the school to fund this club. <a href="http://joeiddon.me/club/log">This page</a> will be used to track our expenditures.
 </p>
 
 
