--- a/club/index.html
+++ b/club/index.html
@@ -9,16 +9,46 @@ The "/club" sector of this website will be used to log the progress of the "Ardu
 </p>
 
 
+<h2>
+Our First Project: a classic snake game on a matrix of LEDs.
+</h2>
+
 <p>
-At the time of creation, we are in the middle of our first project: a classic snake game on an 8x8 matrix of LEDs.
+To get used to how the group would work, we decided to begin with something that wouldn't be too challenging, but would create something cool.
 </p>
 
 <p>
-The code for this first project can be seen over on <a href="https://github.com/RoadKillCat/LEDMatrixSnake">github</a>.
+To start with, we used a pre-built LED matrix that would focus our attention on the software (programming the game) rather than the hardware.
 </p>
 
 <p>
-Some pictures of our work so far:
+After a couple of weeks we managed to get the core design of the snake game working well using some little push switches for inputs.
 </p>
 
-<p>[Tom's stuf here]</p>
+<p>
+The Arduino sketch for this can be seen over on <a href="https://github.com/RoadKillCat/LEDMatrixSnake">github</a>.
+</p>
+
+<p>
+Here it is working:
+[video of game working]
+</p>
+
+<p>
+Now that we had the thing working connected by loose wires, we decided that it would be nice to have a finnished product that was one device. For this, we all needed to be able to solder and this would be a valuable skill for us in the future, so I gave a little demonstration, and everyone picked it up straight away.
+</p>
+
+<p>
+We were now ready to get the components together to build the final product - the main being a more compact matrix. We brought an unsoldered one off ebay quite cheaply, but it required us to solder it together including the miniscule surface-mount chip.
+</p>
+
+<img src="http://joeiddon.me/images/matrix/matrix.jpeg"></img>
+
+<p>
+And here are some pictures of our work soldering it together:
+</p>
+
+<img src="http://joeiddon.me/images/matrix/chip.jpg"></img>
+<img src="http://joeiddon.me/images/matrix/capacitor.jpg"></img>
+
+<p>[More pics to come.]</p>
