--- a/club/index.html
+++ b/club/index.html
@@ -49,7 +49,7 @@ Now that we had the thing working connected by loose wires, we decided that it w
 We were now ready to get the components together to build the final product - the main being a more compact matrix. We brought an unsoldered one off ebay quite cheaply, but it required us to solder it together including the miniscule surface-mount chip.
 </p>
 
-<img src="http://joeiddon.me/images/matrix/matrix.jpeg"></img>
+<img src="http://joeiddon.me/images/matrix/matrix.jpg"></img>
 
 <p>
 And here are some pictures of our work soldering it together:
