--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -87,6 +87,11 @@ layout: default
       <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/snake2dPreview.JPG"></img>
       </a>
     </td>
+    <td>
+      <a href="http://joeiddon.me/projects/javascript/paint">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/floodfill.png"></img>
+      </a>
+    </td>
   </tr>
   
 </table>
