--- a/projects/javascript/paint.html
+++ b/projects/javascript/paint.html
@@ -1,1 +1,12 @@
+---
+layout: default
+---
 
+<h1>Paint in the HTML5 Canvas</h1>
+
+<h2><a href="http://joeiddon.me/Paint">Basic Paint Here</a></h2>
+<h2><a href="http://joeiddon.me/Paint/floodfill">Floodfill Paint Here</a></h2>
+
+<p>
+Description coming soon....
+</p>
