--- a/club/index.html
+++ b/club/index.html
@@ -72,8 +72,8 @@ Next, we made the controller board by soldering some push buttons to some copper
 And that was pretty much it! We uploaded the sketch to the Nano that we had already coded for the Mega (the code is compatible between board types in this case) and that was it. Here are some photos of the finnished product, and finally a video of it in action.
 </p>
 
-<img src="http://joeiddon.me/images/finnishedSide.jpg"></img>
-<img src="http://joeiddon.me/images/finnishedBottom.jpg"></img>
-<img src="http://joeiddon.me/images/finnishedTop.jpg"></img>
+<img src="http://joeiddon.me/images/finnishedSide.jpg"
+><img src="http://joeiddon.me/images/finnishedBottom.jpg"
+><img src="http://joeiddon.me/images/finnishedTop.jpg">
 
 <iframe width="1280" height="720" src="https://www.youtube.com/embed/c_MW5CDzECU?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
