--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+
 <h1>Tuoba</h1>
 
 <p>
@@ -11,3 +12,5 @@ layout: default
 <a href="https://stackoverflow.com/users/7434365">
 	<img style="width: 208px; height: 58px;" src="https://stackoverflow.com/users/flair/7434365.png?theme=dark">
 </a>
+
+<img style="width: 208px; height: 58px;" src="https://projecteuler.net/profile/Eulers_Cat_Walker.png"?
