--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -93,5 +93,18 @@ layout: default
       </a>
     </td>
   </tr>
+
+  <tr>    
+    <td>
+      <a href="http://joeiddon.me/projects/javascript/gameOfLife">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/GameOfLife.png"></img>
+      </a>
+    </td>
+    <td>
+      <a href="http://joeiddon.me/projects/javascript/paint">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/floodfill.png"></img>
+      </a>
+    </td>
+  </tr>
   
 </table>
