--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -23,4 +23,19 @@ layout: default
       </a>
     </td>
   </tr>
+
+  <tr>
+    <td>
+      <a href="http://joeiddon.me/projects/arduino/quadropod">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/quadropod.png"></img>
+      </a>
+    </td>
+    <!--
+    <td>
+      <a href="http://joeiddon.me/projects/arduino/mg996rRobotArm">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/robotArm.jpg"></img>
+      </a>
+    </td>-->
+  </tr>
+
 </table>
