--- a/projects/arduino/quadropod.html
+++ b/projects/arduino/quadropod.html
@@ -23,4 +23,15 @@ layout: default
 
 <p>Here is a video showing that motion:</p>
 
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/q29UK1SToo0?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/mMfAy8sCkts?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+
+<p>Finally, I just needed to write some simply code so that the robot turned (using a technique of putting two legs on one side together and pushing around on the other) whenever a wall/object got detected by the ultrasonic sensor.</p>
+
+<p>Here is a video of it doing some walking then turning when it sensors the white wall in its path:</p>
+
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/mMfAy8sCkts?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+
+<p>And two sped up videos of the robot navigating its pen:</p>
+
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/mMfAy8sCkts?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/mMfAy8sCkts?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
