--- a/projects/arduino/quadropod.html
+++ b/projects/arduino/quadropod.html
@@ -7,7 +7,7 @@ layout: default
 <p>After watching how newts move, I thought it would be cool to try and imitate the motion of their legs and how they move around.</p>
 
 <p>Here is my "research" video that I based the project off:</p>
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/q29UK1SToo0?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/mMfAy8sCkts?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
 
 <p>I then began building the thing. The frame was to be made out of 3mm plywood which would be easy to cut to the right shapes for the different parts.  Then, each leg neeeded 2 motors so with 4 legs, I ended up using 8 <a href="https://servodatabase.com/servo/towerpro/sg90">sg90</a> servo motors as they are cheap and have sufficient torque for this application. Finally, I used a HC-SR04 ultrasonic sensor to allow the robot to sense obstacles (and hopefully avoid walls).</p>
 
@@ -23,15 +23,14 @@ layout: default
 
 <p>Here is a video showing that motion:</p>
 
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/mMfAy8sCkts?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/Jlzdj5vw7Kc?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
 
 <p>Finally, I just needed to write some simply code so that the robot turned (using a technique of putting two legs on one side together and pushing around on the other) whenever a wall/object got detected by the ultrasonic sensor.</p>
 
 <p>Here is a video of it doing some walking then turning when it sensors the white wall in its path:</p>
 
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/mMfAy8sCkts?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/3G26zuBcm3k  ?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
 
-<p>And two sped up videos of the robot navigating its pen:</p>
+<p>And a sped up videos of the robot navigating about its pen:</p>
 
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/mMfAy8sCkts?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/mMfAy8sCkts?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/dSzSgxzZOpQ?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
