--- a/club/log.html
+++ b/club/log.html
@@ -22,9 +22,9 @@ var tbdy = document.createElement("tbody")
 var rws = [
 ["Item", "Price", "Remaining"],
 ["LED Matrix", "1.49", "248.51"],
-["Arduino Nano", "1.83"],
-["Arduino Nano", "1.83"],
-["Arduino Nano", "1.83"],
+["3x Arduino Nano", "5.49"],
+["12x SG92R Servos", "27.68"],
+["PCA9685 Servo Controller", "2.52"]
 ]
 for (var r = 2; r < rws.length; r++){
 	console.log(r)
