--- a/club/index.html
+++ b/club/index.html
@@ -13,67 +13,25 @@ img {
 <h1>Arduino Club</h1>
 
 <p>
-The "/club" sector of this website will be used to log the progress of the "Arduino Club" which I was granted some money by the school to run. <a href="http://joeiddon.me/club/log">This page</a> will be used to track our expenditures.
-</p>
-
-
-<h2>
-Our First Project: a classic snake game on a matrix of LEDs.
-</h2>
-
-<p>
-To get used to how the group would work, we decided to begin with something that wouldn't be too challenging, but would create something cool.
+The "/club" sector of this website will be used to log the progress of the "Arduino Club" which I was granted some money to run. If you aren't sure what an Arduino is, take a look out this <a href="http://joeiddon.me/projects/arduino/about">about page</a> I wrote to explain what they are.
 </p>
 
 <p>
-We used the MAX7219 8x8 LED matrix for the display and just wired it up loosely to start with as a prototype so that we could focus our attention on the software (programming the game) rather than the hardware.
+To keep track of what we spend the money on, <a href="http://joeiddon.me/club/log">This page</a> will be used to track our expenditures.
 </p>
 
-<p>
-After a couple of weeks we managed to get the core design of the snake game working well using some little push switches for inputs.
-</p>
-
-<p>
-The Arduino sketch for this can be seen over on <a href="https://github.com/RoadKillCat/LEDMatrixSnake">github</a>.
-</p>
-
-<p>
-We were prototyping with an Arduino Mega and a breadboard connected with some jumpers:
-</p>
-
-<img src="http://joeiddon.me/images/prototype.jpg"></img>
-
-<p>
-Now that we had the thing working, we decided that it would be nice to have a finnished product that was one device. For this, we all needed to be able to solder (to make a proper controller) and this would be a valuable skill for us in the future, so I gave a little demonstration, and everyone picked it up straight away.
-</p>
-
-<p>
-We were now ready to get the components together to build the final product - the main being a more compact matrix. We brought an unsoldered one off ebay quite cheaply, but it required us to solder it together including the miniscule surface-mount chip.
-</p>
-
-<img src="http://joeiddon.me/images/matrix/matrix.jpg"></img>
-
-<p>
-And here are some pictures of our work soldering it together:
-</p>
-
-<img src="http://joeiddon.me/images/matrix/chip.jpg"></img>
-<img src="http://joeiddon.me/images/matrix/capacitor.jpg"></img>
-
-<p>
-However, after soldering the components together for this, we realised that to make the project as small as possible, it would make sense to just use the larger matrix as this had enough space to mount the Arduino Nano we would be using and the controller board. So even though this was a valuable lesson on soldering, we ended up not using it!
-</p>
-
-<p>
-Next, we made the controller board by soldering some push buttons to some copper stripboard and wiring this directly to the Nano, along with the LED matrix.
-</p>
-
-<p>
-And that was pretty much it! We uploaded the sketch to the Nano that we had already coded for the Mega (the code is compatible between board types in this case) and that was it. Here are some photos of the finnished product, and finally a video of it in action.
-</p>
-
-<img src="http://joeiddon.me/images/finnishedSide.jpg"
-><img src="http://joeiddon.me/images/finnishedBottom.jpg"
-><img src="http://joeiddon.me/images/finnishedTop.jpg">
-
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/ASf3uLuhJrI?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<table>
+  <tr>
+    <td>
+      <a href="http://joeiddon.me/club/snake">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/snake_fin.jpg"></img>
+      </a>
+    </td>
+    
+    <td>
+      <a href="http://joeiddon.me/projects/arduino/mg996rRobotArm">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/robotArm.jpg"></img>
+      </a>
+    </td>
+  </tr>
+</table>
