linke project css to club

--- a/club/index.html
+++ b/club/index.html
@@ -20,6 +20,8 @@ The "/club" sector of this website will be used to log the progress of the "Ardu
 To keep track of what we spend the money on, <a href="http://joeiddon.me/club/log">This page</a> will be used to track our expenditures.
 </p>
 
+<link rel="stylesheet" href="http://joeiddon.me/projects/project.css">
+
 <table>
   <tr>
     <td>
