--- a/club/index.html
+++ b/club/index.html
@@ -31,8 +31,8 @@ To keep track of what we spend the money on, <a href="http://joeiddon.me/club/lo
     </td>
     
     <td>
-      <a href="http://joeiddon.me/projects/arduino/mg996rRobotArm">
-      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/robotArm.jpg"></img>
+      <a href="http://joeiddon.me/club/hexapod">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/hexapod/after_cut.jpg"></img>
       </a>
     </td>
   </tr>
