--- a/projects/javascript/snake.html
+++ b/projects/javascript/snake.html
@@ -4,8 +4,27 @@ layout: default
 
 <h1>The original snake game</h1>
 
-<h2><a href="http://joeiddon.me/SnakeGame/2d.html">play it here (controls are arrow-keys)</a></h2>
+<h2><a href="http://joeiddon.me/SnakeGame/2d.html">play it in 2d here (controls are arrow-keys)</a></h2>
+<h2><a href="http://joeiddon.me/SnakeGame/3d.html">play it in 3d here</a></h2>
 
 <p>
-Description coming soon....
+This was a proof-of-concept project to just test the basic snake game.
+</p>
+
+<p>
+The main application was to use the same code (translated to C) for the Arduino Club's <a href="http://joeiddon.me/club/snake">snake game</a>.
+</p>
+
+<p>
+However, as I was also working on my 3d graphics library at the time, I decided to also make it in 3d.
+</p>
+
+<p>
+The code for this was extremely simple, as all that needed doing was to convert the 2d coordinates of the snake's body into locations of 3d blocks. It was then just a matter of picking a good camera angle to survey the game from, and that's all there was to it.</p>
+
+<p>
+For a bit of fun, I also added a third dimension to the actual game space (so you can move up and down the z-axis as well). This was a cool idea, but ended up being virtually impossible to actually play!
+</p>
+
+<p>See the links at the top of the page to play them.
 </p>
