--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -30,12 +30,11 @@ layout: default
       <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/quadropod.png"></img>
       </a>
     </td>
-    <!--
     <td>
-      <a href="http://joeiddon.me/projects/arduino/mg996rRobotArm">
-      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/robotArm.jpg"></img>
+      <a href="http://joeiddon.me/projects/arduino/bitcoin">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/bitcoinBinary.jpeg"></img>
       </a>
-    </td>-->
+    </td>
   </tr>
 
 </table>
