fixed image extenstioN

--- a/projects/arduino/bitcoin.html
+++ b/projects/arduino/bitcoin.html
@@ -26,8 +26,8 @@ layout: default
 
 <p>Here are some photos of the finished thing. (the price at the time was: 01111110100110 which is 8102 pounds).</a>
 
-<img src="/images/bitcoin_side.jpg"></img>
+<img src="/images/bitcoin_side.jpeg"></img>
 <img src="/images/bitcoin_top.jpg"></img>
 <img src="/images/feather_top.jpg"></img>
-<img src="/images/feather_side.jpg"></img>
+<img src="/images/feather_front.jpg"></img>
 <img src="/images/lipo.jpg"></img>
